packages/vsce/src/webviews/css/style.css
.maindiv {
  display: flex;
  flex-direction: column;
  padding: 1rem;
  gap: 1rem;
}

.table-header1 {
  position: fixed;
  top: 0;
  padding-left: 0.625rem;
  padding-right: 4.188rem;
  left: 2.25rem;
  right: 6.25rem;
}

.padding-top-20 {
   padding-top: 1.25rem;
}

.line {
  line-height: 0.5;
  font-size: small;
}

.header-cell-1 {
  vertical-align: middle;
}

.thead-2{
  position: sticky;
}

.th-2 {
  width: 100% !important;
  padding-left: 1.063rem !important;
}

.th-3 {
  width: 75% !important;
  padding-bottom: 0.125rem !important;
}

.div-display-1{
  display: inline-block;
  vertical-align: middle;
}

.div-display-2{
  font-size: x-small;
  padding-left: 0.438rem;
  font-weight: 400;
}

.padding-left-10{
  padding-left: 0.625rem;
}

.padding-left-20{
  padding-left: 1.25rem;
}

.padding-left-25{
  padding-left: 1.563rem !important;
}

.padding-left-27{
  padding-left: 1.688rem !important;
}

.padding-right-10{
  padding-right: 0.625rem;
}
.padding-right-75{
  padding-right: 4.688rem;
}

.search-style{
  width: 18.75rem;
  float: right;
  margin-bottom: 0.313rem;
  border: none;
}

.width-30{
  width: 30%;
}
.width-70{
  width: 70%;
}

.vertical-align-sub {
  vertical-align: sub;
}

.border-collapse {
  border-collapse: collapse;
}

body.vscode-light table,
body.vscode-light th,
body.vscode-light tr,
body.vscode-light td {
    padding: 0.5rem;
    font-family: var(--vscode-font-family);
    color: var(--vscode-foreground);
  }

body.vscode-light th {
    background-color: #f0f0f0;
    text-align: left;
    width: 73.75rem;
    color: var(--vscode-foreground);
  }

body.vscode-light thead {
    background-color: #f0f0f0;
    text-align: left;
    width: 73.75rem;
    color: var(--vscode-foreground);
  }

 body.vscode-light tr:nth-child(even) {
  background-color: #f2f2f2;
}

body.vscode-dark table,
body.vscode-dark th,
body.vscode-dark tr,
body.vscode-dark td {
    padding: 0.5rem;
    font-family: var(--vscode-font-family);
  }
body.vscode-dark tr:nth-child(even) {
  background-color: rgba(204, 204, 204, 0.04);
}
body.vscode-dark th {
    background-color: 	rgb(40,40,40);
    text-align: left;
    width: 73.75rem;
    color: var(--vscode-foreground);
  }

body.vscode-dark thead {
    background-color: rgb(40,40,40);
    text-align: left;
    width: 73.75rem;
    color: var(--vscode-foreground);
  }

body.vscode-dark input {
    background-color: 	rgb(60, 60, 60);
  }

